--- a/src/index.html
+++ b/src/index.html
@@ -25,5 +25,45 @@
       </div>
     </div>
   </nav>
+  <main>
+    <section class="hero">
+      <div class="container">
+        <div class="hero-block">
+          <div class="hero-text">
+            <h1 class="hero-text__title">Внутренняя отделка помещений "под ключ"</h1>
+            <span class="hero-text__subtitle">с гарантией качества, прописанной в договоре</span>
+            <ul class="hero-list">
+              <li class="hero-list__item">
+                <div class="hero-list__image">
+                  <img src="img/hero/clock-circular.png" alt="Часы">
+                </div>
+                <span class="hero-list__text">Точно соблюдаем сроки</span>
+              </li>
+              <li class="hero-list__item">
+                <div class="hero-list__image">
+                  <img src="img/hero/calculator.png" alt="Калькулятор">
+                </div>
+                <span class="hero-list__text">Рассчитаем смету на работы и материалы в день обращения</span>
+              </li>
+              <li class="hero-list__item">
+                <div class="hero-list__image">
+                  <img src="img/hero/paint-board.png" alt="Краски">
+                </div>
+                <span class="hero-list__text">Предложим более 100 вариантов исполнения дизайна Вашего жилья</span>
+              </li>
+            </ul>
+          </div>
+          <!-- /.hero-text -->
+          <div class="hero-image">
+            <img src="img/hero/hero-image.png" alt="План квартиры">
+          </div>
+          <!-- /.hero-image -->
+        </div>
+        <!-- /.hero-block -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.hero -->
+  </main>
 </body>
 </html>
