section offer developed, adapted, fit pixel perfect, input border change on focus

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
           </div>
           <!-- /.hero-text -->
           <div class="hero-image">
-            <img src="img/hero/hero-image.png" alt="План квартиры">
+            <img class="hero-image__pic" src="img/hero/hero-image.png" alt="План квартиры">
           </div>
           <!-- /.hero-image -->
         </div>
@@ -64,6 +64,32 @@
       <!-- /.container -->
     </section>
     <!-- /.hero -->
+    <section class="offer section">
+      <div class="container">
+        <div class="offer-block">
+          <h2 class="section-title offer__title">Мы бесплатно разработаем дизайн-проект Вашего жилья и реализуем его!</h2>
+          <!-- /.section-title -->
+          <span class="section-subtitle offer__subtitle">Оставьте заявку на разработку бесплатного дизайн-проекта!</span>
+          <!-- /.section-subtitle -->
+          <form action="#" class="form offer__form">
+            <input type="text" class="input offer__input" placeholder="Ваше имя">
+            <input type="tel" class="input offer__input" placeholder="Ваш телефон">
+            <button class="button offer__button">Получить бесплатный дизайн-проект</button>
+          </form>
+          <!-- /.form offer__form -->
+          <div class="offer-text">
+            <span class="offer-text__callback">Наш менеджер перезвонит Вам в течение 60 секунд</span>
+            <div class="offer-contactus">
+              <span class="offer-contactus__callus">или перезвоните нам сами</span>
+              <a href="tel:+7(495)42-251-31" class="offer-contactus__phone">+7 (495) 42-251-31</a>
+            </div>
+          </div>
+        </div>
+        <!-- /.offer-block -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section offer -->
   </main>
 </body>
 </html>
