--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
                 <div class="hero-list__image">
                   <img src="img/hero/calculator.png" alt="Калькулятор">
                 </div>
-                <span class="hero-list__text">Рассчитаем смету на работы и материалы в день обращения</span>
+                <span class="hero-list__text">Рассчитаем смету на работы и&nbsp;материалы в день обращения</span>
               </li>
               <li class="hero-list__item">
                 <div class="hero-list__image">
