--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
             <span class="navbar__address">Калуга, Москва, МО</span>
             <a href="tel:+7(495)42-251-31" class="navbar__phone">+7 (495) 42-251-31</a>
           </div>
-          <button class="button navbar__button">Перезвоните мне</button>
+          <button class="button navbar__button" id="button">Перезвоните мне</button>
         </div>
       </div>
     </div>
@@ -91,5 +91,23 @@
     </section>
     <!-- /.section offer -->
   </main>
+  <div class="modal" id="modal">
+    <div class="modal-dialog">
+      <h4 class="modal-dialog__title">Узнайте точную стоимость<br> ремонта по телефону!</h4>
+      <span class="modal-dialog__subtitle">Заполните поля ниже - мы свяжемся с Вами</span>
+      <form action="#" class="form">
+        <input type="text" class="input form__input " placeholder="Ваше имя">
+        <input type="tel" class="input form__input" placeholder="Ваш телефон">
+        <button class="button form__button">Узнать стоимость</button>
+      </form>
+      <span class="modal-dialog__subtitle2">Или Вы можете перезвонить нам сами<br> по телефону:</span>
+      <a href="tel:+7(495)42-251-31" class="navbar__phone">+7 (495) 42-251-31</a>
+      <button class="modal-dialog__close" id="close">&times;</button>
+
+    </div>
+    <!-- /.modal-dialog -->
+  </div>
+  <!-- /.modal -->
+  <script src="js/main.js"></script>
 </body>
 </html>
