--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,7 @@
     </section>
     <!-- /.section offer -->
   </main>
+  <div class="buttonup" id="buttonup"><img src="img/button-up.png" alt=""></div>
   <div class="modal" id="modal">
     <div class="modal-dialog">
       <h4 class="modal-dialog__title">Узнайте точную стоимость<br> ремонта по телефону!</h4>
@@ -109,5 +110,9 @@
   </div>
   <!-- /.modal -->
   <script src="js/main.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <!-- <script src="js/modal.js"></script> -->
+    <script src='js/button.js'></script>
 </body>
 </html>
