--- a/src/index.html
+++ b/src/index.html
@@ -209,6 +209,54 @@
       <!-- /.container -->
     </section>
     <!-- /.section price -->
+    <section class="section steps">
+      <div class="container">
+        <h2 class="section-title steps__title">Наши специалисты готовы выехать на замер в любое удобное для Вас время</h2>
+        <!-- /.section-title steps__title -->
+        <span class="section-subtitle steps__subtitle">5 шагов до ремонта</span>
+        <!-- /.section-subtitle steps__subtitle -->
+        <div class="steps-block">
+          <div class="step">
+            <div class="step__image"><img src="img/steps/1-woman-headset.png" alt=""></div>
+            <!-- /.step__image -->
+            <p class="step__text">Вы звоните нам или оставляете заявку</p>
+            <!-- /.step__text -->
+          </div>
+          <!-- /.step -->
+          <div class="step">
+            <div class="step__image"><img src="img/steps/2-wall-clock.png" alt=""></div>
+            <!-- /.step__image -->
+            <p class="step__text">Согласуем удобное для Вас время выезда специалиста на замер</p>
+            <!-- /.step__text -->
+          </div>
+          <!-- /.step -->
+          <div class="step">
+            <div class="step__image"><img src="img/steps/3-cash-money.png" alt=""></div>
+            <!-- /.step__image -->
+            <p class="step__text">Рассчитываем смету согласовываем с Вами</p>
+            <!-- /.step__text -->
+          </div>
+          <!-- /.step -->
+          <div class="step">
+            <div class="step__image"><img src="img/steps/4-document-icon.png" alt=""></div>
+            <!-- /.step__image -->
+            <p class="step__text">Подписываем договор закупаем материал по оптовым ценам</p>
+            <!-- /.step__text -->
+          </div>
+          <!-- /.step -->
+          <div class="step">
+            <div class="step__image"><img src="img/steps/5-calendar-clock.png" alt=""></div>
+            <!-- /.step__image -->
+            <p class="step__text">Выполняем ремонт в указанные сроки</p>
+            <!-- /.step__text -->
+          </div>
+          <!-- /.step -->
+        </div>
+        <!-- /.steps-block -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section steps -->
   </main>
   <div class="buttonup" id="buttonup"><img src="img/button-up.png" alt=""></div>
   <div class="modal" id="modal">
