--- a/src/index.html
+++ b/src/index.html
@@ -75,9 +75,9 @@
           <!-- /.section-title -->
           <span class="section-subtitle offer__subtitle">Оставьте заявку на разработку бесплатного дизайн-проекта!</span>
           <!-- /.section-subtitle -->
-          <form action="#" class="form offer__form">
-            <input type="text" class="input offer__input" placeholder="Ваше имя">
-            <input type="tel" class="input offer__input" placeholder="Ваш телефон">
+          <form action="#" class="form offer__form" id="offer-form">
+            <div class="input-group"><input type="text" autocomplete="off" name="off_username" class="input offer__input" placeholder="Ваше имя"></div>
+            <div class="input-group"><input type="tel" autocomplete="off" name="off_phone" class="input offer__input phone" placeholder="Ваш телефон"></div>
             <button class="button offer__button">Получить бесплатный дизайн-проект</button>
           </form>
           <!-- /.form offer__form -->
@@ -257,6 +257,56 @@
       <!-- /.container -->
     </section>
     <!-- /.section steps -->
+    <section class="section brief">
+      <div class="container">
+        <div class="brief-block">
+          <div class="interview brief__interview">
+            <h3 class="interview__title">Мы можем озвучить Вам примерную стоимость работы и материалов по телефону</h3>
+            <span class="interview__subtitle">Для этого нужно ответить на 4 вопроса:</span>
+            <ul class="interview-list">
+              <li class="interview-list__item">
+                <span class="interview-list__counter">1.</span> <!-- /.interview-list__counter -->
+                <span class="interview-list__text">Какова площадь помещения?</span> <!-- /.interview-list__text -->
+              </li>
+              <!-- /.interview-list__item -->
+              <li class="interview-list__item">
+                <span class="interview-list__counter">2.</span> <!-- /.interview-list__counter -->
+                <span class="interview-list__text">У Вас новостройка или вторичное жилье?</span> <!-- /.interview-list__text -->
+              </li>
+              <!-- /.interview-list__item -->
+              <li class="interview-list__item">
+                <span class="interview-list__counter">3.</span> <!-- /.interview-list__counter -->
+                <span class="interview-list__text">Где находится помещение, в котором будет производиться ремонт?</span> <!-- /.interview-list__text -->
+              </li>
+              <!-- /.interview-list__item -->
+              <li class="interview-list__item">
+                <span class="interview-list__counter">4.</span> <!-- /.interview-list__counter -->
+                <span class="interview-list__text">Назначение помещения?</span> <!-- /.interview-list__text -->
+              </li>
+              <!-- /.interview-list__item -->
+            </ul>
+            <!-- /.interview-list -->
+          </div>
+          <!-- /.interview brief__interview -->
+          <div class="form brief__form">
+            <h3 class="form__title">Оставьте заявку на бесплатный расчет ремонта по телефону</h3>
+            <span class="form__subtitle">Для этого заполните форму ниже</span>
+            <form action="#" id="brief-form">
+              <div class="input-group"><input type="text" autocomplete="off" name="username" class="input brief__input" placeholder="Ваше имя"></div>
+              <div class="input-group"><input type="tel" autocomplete="off" class="input brief__input phone" placeholder="Ваш телефон"></div>
+              <div class="input-group"><input type="email" autocomplete="off" name="email" class="input brief__input" placeholder="Ваш email"></div>
+              <button class="button brief__button">Рассчитать стоимость</button>
+              <span class="form__description">Мы перезвоним Вам в течение 60 секунд</span>
+              <!-- /.button brief__button -->
+            </form>
+          </div>
+          <!-- /.form brief__form -->
+        </div>
+        <!-- /.brief-block -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section brief -->
   </main>
   <div class="buttonup" id="buttonup"><img src="img/button-up.png" alt=""></div>
   <div class="modal" id="modal">
@@ -283,9 +333,64 @@
     <script src='js/button.js'></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/wow.min.js"></script>
+    <script src="js/animate.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
     <script>
       new WOW().init();
       $(document).ready(function(){
+        $('#offer-form').validate({
+          rules: {
+            off_username: {
+              required: true,
+              minlength: 2,
+              maxlength: 15
+            },
+            off_phone: "required"
+          },
+          errorElement: "em",
+          errorClass: "invalid",
+          messages: {
+            off_username: {
+              required: "<b>Заполните поле</b>",
+              minlength: jQuery.validator.format("Осталось ввести символов: {0}!"),
+              maxlength: jQuery.validator.format("Слишком много символов! Должно быть меньше: {0}.")
+            },
+            off_phone: "<b>Заполните поле</b>"
+          }
+        });
+        /* Валидация формы brief */
+        $('#brief-form').validate({
+          rules: {
+            username: {
+              required: true,
+              minlength: 2,
+              maxlength: 15
+            },
+            phone: "required",
+            email: {
+              required: true,
+              email: true
+            }
+          },
+          errorElement: "em",
+          errorClass: "invalid",
+          messages: {
+            username: {
+              required: "<b>Заполните поле</b>",
+              minlength: jQuery.validator.format("Осталось ввести символов: {0}!"),
+              maxlength: jQuery.validator.format("Слишком много символов! Должно быть меньше: {0}.")
+            },
+            phone: "<b>Заполните поле</b>",
+            email: {
+              required: "<b>Заполните поле</b>",
+              email: "<i>Введите корректный email</i>"
+            }
+          }
+        });
+        /* Маска для валидации*/
+        $('.phone').mask('8 (999) 999-99-99');
+        /* Запуск слайдера карусель*/
         $(".owl-carousel").owlCarousel({
           loop: true,
           margin: 10,
@@ -305,32 +410,32 @@
         });
       });
     </script>
-    <!-- <script src="js/slick.min.js"></script>
-    <script>
-    $(document).ready(function(){
-      $('.slider').slick({
-        slidesToShow: 3,
-        slidesToScroll: 1,
-        prevArrow: $('.arrows__left'),
-        nextArrow: $('.arrows__right'),
-        responsive: [
-          {
-            breakpoint: 1200,
-            settings: {
-              slidesToShow: 2,
-              slidesToScroll: 1,
-            }
-          },
-          {
-            breakpoint: 768,
-            settings: {
-              slidesToShow: 1,
-              slidesToScroll: 1
-            }
-          }
-        ]
-      });
-    });
-    </script> -->
+    // <!-- <script src="js/slick.min.js"></script>
+    // <script>
+    // $(document).ready(function(){
+    //   $('.slider').slick({
+    //     slidesToShow: 3,
+    //     slidesToScroll: 1,
+    //     prevArrow: $('.arrows__left'),
+    //     nextArrow: $('.arrows__right'),
+    //     responsive: [
+    //       {
+    //         breakpoint: 1200,
+    //         settings: {
+    //           slidesToShow: 2,
+    //           slidesToScroll: 1,
+    //         }
+    //       },
+    //       {
+    //         breakpoint: 768,
+    //         settings: {
+    //           slidesToShow: 1,
+    //           slidesToScroll: 1
+    //         }
+    //       }
+    //     ]
+    //   });
+    // });
+    // </script> -->
 </body>
 </html>
