added footer section, yandex map

--- a/src/index.html
+++ b/src/index.html
@@ -308,6 +308,47 @@
     </section>
     <!-- /.section brief -->
   </main>
+  <footer class="footer">
+    <div class="map" id="map">
+      <script type="text/javascript" charset="utf-8" async
+        src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A266554c6d9b6678d4dcddc1dd63b8cb7d9ed7b6f69516d457c830edb3c7af95e&amp;width=100%25&amp;height=640&amp;lang=ru_RU&amp;scroll=false"></script>
+    </div>
+    <div class="container">
+      <div class="contacts-block">
+        <div class="contacts">
+          <h3 class="contacts__title">Приезжайте к нам в гости! Проконсультируем Вас <br>по всем вопросам ремонта</h3>
+          <ul class="contacts-list">
+            <li class="contacts-list__item">
+              <span class="contacts-list__icon">
+                <img src="img/footer/map-placeholder.png" alt="">
+              </span> <!-- /.contacts-list__icon -->
+              <span class="contacts-list__text">г. Москва<br><strong>ул. Ленина, д. 10, корпус 2, оф. 308</strong></span> <!-- /.contacts-list__text -->
+            </li>
+            <!-- /.contacts-list__item -->
+            <li class="contacts-list__item">
+              <span class="contacts-list__icon">
+                <img src="img/footer/clock-with-face.png" alt="">
+              </span> <!-- /.contacts-list__icon -->
+              <span class="contacts-list__text">Режим работы:<br><strong>с 9:00 до 18:00</strong></span> <!-- /.contacts-list__text -->
+            </li>
+            <!-- /.contacts-list__item -->
+            <li class="contacts-list__item">
+              <span class="contacts-list__icon">
+                <img src="img/footer/phone-button.png" alt="">
+              </span> <!-- /.contacts-list__icon -->
+              <span class="contacts-list__text">Телефон:<br><a href="tel:+7(495)42-251-31">+ 7 (495) 42-251-31</a></span> <!-- /.contacts-list__text -->
+            </li>
+            <!-- /.contacts-list__item -->
+          </ul>
+          <!-- /.contacts-list -->
+        </div>
+        <!-- /.contacts -->
+      </div>
+      <!-- /.contacts-block -->
+    </div>
+    <!-- /.container -->
+  </footer>
+  <!-- /.footer section -->
   <div class="buttonup" id="buttonup"><img src="img/button-up.png" alt=""></div>
   <div class="modal" id="modal">
     <div class="modal-dialog">
@@ -410,7 +451,7 @@
         });
       });
     </script>
-    // <!-- <script src="js/slick.min.js"></script>
+    <!-- <script src="js/slick.min.js"></script>
     // <script>
     // $(document).ready(function(){
     //   $('.slider').slick({
