--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Ремонт квартир</title>
   <link rel="stylesheet" href="css/style.css">
+  <!-- <link rel="stylesheet" href="css/slick.css"> -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <nav class="navbar">
@@ -70,12 +73,12 @@
           <!-- /.section-title -->
           <span class="section-subtitle offer__subtitle">Оставьте заявку на разработку бесплатного дизайн-проекта!</span>
           <!-- /.section-subtitle -->
-          <form action="mail.php" method="POST" id="offer-form" class="form offer__form">
+          <form action="mail.php" method="POST" class="form offer__form" name="offer-form" id="offer-form">
             <div class="input-group_transforming input-group_transforming__margin">
-              <input type="text" autocomplete="off" name="off_username" class="input offer__input" placeholder="Ваше имя">
+              <input type="text" name="off_username" class="input offer__input" autocomplete="off" placeholder="Ваше имя">
             </div>
             <div class="input-group_transforming">
-              <input type="tel" autocomplete="off" name="off_phone" class="input offer__input phone" placeholder="Ваш телефон">
+              <input type="tel" name="off_phone" class="input offer__input phone" autocomplete="off" placeholder="Ваш телефон">
             </div>
             <div class="button-group button-group__width">
               <button class="button offer__button" id="offer-button">Получить бесплатный дизайн-проект</button>
@@ -98,26 +101,26 @@
     <section class="section portfolio">
       <div class="container">
         <h2 class="section-title portfolio__title">Работая с 2007 года,<br> мы сделали более 500 ремонтов в квартирах и домах</h2>
-        <div class="slider owl-carousel">
-          <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-1.jpg" alt=""></div>
+        <div class="slider">
+          <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-1.webp" alt=""></div>
           <!-- /.slider__item -->
-          <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-2.jpg" alt=""></div>
+          <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-2.webp" alt=""></div>
           <!-- /.slider__item -->
-          <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-3.jpg" alt=""></div>
+          <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-3.webp" alt=""></div>
           <!-- /.slider__item -->
-          <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-1.jpg" alt=""></div>
+          <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-1.webp" alt=""></div>
           <!-- /.slider__item -->
-          <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-2.jpg" alt=""></div>
+          <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-2.webp" alt=""></div>
           <!-- /.slider__item -->
-          <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-3.jpg" alt=""></div>
+          <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-3.webp" alt=""></div>
           <!-- /.slider__item -->
         </div>
-        <div class="arrows portfolio__arrows owl-nav">
-          <div class="arrows__left owl-prev">
-            <!-- <img src="img/portfolio/left-arrow.png" alt="">   -->
+        <div class="arrows portfolio__arrows">
+          <div class="arrows__left">
+            <img src="img/portfolio/left-arrow.png" alt="">  
           </div>
-          <div class="arrows__right owl-next">
-            <!-- <img src="img/portfolio/right-arrow.png" alt=""> -->
+          <div class="arrows__right">
+            <img src="img/portfolio/right-arrow.png" alt="">
           </div>
         </div>
         <!-- /.slider -->
@@ -133,7 +136,7 @@
         <!-- /.section-subtitle price__subtitle -->
         <div class="cards">
           <div class="card price__card wow fadeInUp" data-wow-delay="0.1s">
-            <div class="card__image"><img src="img/price/bathroom.jpg" alt=""></div>
+            <div class="card__image"><img src="img/price/bathroom.webp" alt=""></div>
             <!-- /.card__image -->
             <div class="card__text">
               <h4 class="card__title">Ремонт ванных комнат и с/у</h4>
@@ -145,7 +148,7 @@
           </div>
           <!-- /.card -->
           <div class="card price__card wow fadeInUp" data-wow-delay="0.2s">
-            <div class="card__image"><img src="img/price/living.jpg" alt=""></div>
+            <div class="card__image"><img src="img/price/living.webp" alt=""></div>
             <!-- /.card__image -->
             <div class="card__text">
               <h4 class="card__title">Ремонт комнат и квартир</h4>
@@ -157,7 +160,7 @@
           </div>
           <!-- /.card -->
           <div class="card price__card wow fadeInUp" data-wow-delay="0.3s">
-            <div class="card__image"><img src="img/price/office.jpg" alt=""></div>
+            <div class="card__image"><img src="img/price/office.webp" alt=""></div>
             <!-- /.card__image -->
             <div class="card__text">
               <h4 class="card__title">Отделка офисных помещений</h4>
@@ -169,7 +172,7 @@
           </div>
           <!-- /.card -->
           <div class="card price__card wow fadeInUp" data-wow-delay="0.4s">
-            <div class="card__image"><img src="img/price/buildings.jpg" alt=""></div>
+            <div class="card__image"><img src="img/price/buildings.webp" alt=""></div>
             <!-- /.card__image -->
             <div class="card__text">
               <h4 class="card__title">Ремонт в новостройках</h4>
@@ -181,7 +184,7 @@
           </div>
           <!-- /.card -->
           <div class="card price__card wow fadeInUp" data-wow-delay="0.5s">
-            <div class="card__image"><img src="img/price/kitchen.jpg" alt=""></div>
+            <div class="card__image"><img src="img/price/kitchen.webp" alt=""></div>
             <!-- /.card__image -->
             <div class="card__text">
               <h4 class="card__title">Ремонт кухонь</h4>
@@ -193,7 +196,7 @@
           </div>
           <!-- /.card -->
           <div class="card price__card wow fadeInUp" data-wow-delay="0.6s">
-            <div class="card__image"><img src="img/price/houses.jpg" alt=""></div>
+            <div class="card__image"><img src="img/price/houses.webp" alt=""></div>
             <!-- /.card__image -->
             <div class="card__text">
               <h4 class="card__title">Ремонт дач и коттеджей</h4>
@@ -292,7 +295,7 @@
           <div class="form brief__form">
             <h3 class="form__title">Оставьте заявку на бесплатный расчет ремонта по телефону</h3>
             <span class="form__subtitle">Для этого заполните форму ниже</span>
-            <form action="#" id="brief-form">
+            <form action="mail.php" method="POST" id="brief-form">
               <div class="input-group"><input type="text" autocomplete="off" name="username" class="input brief__input" placeholder="Ваше имя"></div>
               <div class="input-group"><input type="tel" autocomplete="off" name="phone" class="input brief__input phone" placeholder="Ваш телефон"></div>
               <div class="input-group"><input type="email" autocomplete="off" name="email" class="input brief__input" placeholder="Ваш email"></div>
@@ -355,7 +358,7 @@
     <div class="modal-dialog">
       <h4 class="modal-dialog__title">Узнайте точную стоимость<br> ремонта по телефону!</h4>
       <span class="modal-dialog__subtitle">Заполните поля ниже - мы свяжемся с Вами</span>
-      <form action="#" class="form" id="modal-form">
+      <form action="mail.php" method="POST" class="form form__modalPadding" id="modal-form">
         <div class="input-group">
           <input type="text" autocomplete="off" name="modal_username" class="input form__input"
             placeholder="Ваше имя">
@@ -367,9 +370,8 @@
         <button class="button form__button">Узнать стоимость</button>
       </form>
       <span class="modal-dialog__subtitle2">Или Вы можете перезвонить нам сами<br> по телефону:</span>
-      <a href="tel:+7(495)42-251-31" class="navbar__phone">+7 (495) 42-251-31</a>
+      <a href="tel:+7(495)42-251-31" class="modal-dialog__phone">+7 (495) 42-251-31</a>
       <button class="modal-dialog__close" id="close">&times;</button>
-
     </div>
     <!-- /.modal-dialog -->
   </div>
@@ -383,13 +385,11 @@
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <!-- <script src='js/button.js'></script> -->
-    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/slick.min.js"></script>
     <script src="js/wow.min.js"></script>
-    <!-- <script src="js/animate.js"></script> -->
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/jquery.maskedinput.min.js"></script>
     <script src="js/main.js"></script>
-    <!-- <script src="js/ya_map.js"></script> -->
+
 </body>
 </html>
